--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Grade ACE</string>
+    <string name="calculate_ogpa_effortlessly">Calculate OGPA Effortlessly with Grade ACE.</string>
+    <string name="sign_up">SIGN UP</string>
+    <string name="login">LOGIN</string>
 </resources>
