--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
     <string name="calculate_ogpa_effortlessly">Calculate OGPA Effortlessly with Grade ACE.</string>
     <string name="sign_up">SIGN UP</string>
     <string name="login">LOGIN</string>
+    <string name="create_new_account">Create New Account</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="enter_email">Enter Email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="save">SAVE</string>
+    <string name="already_have_an_account"><u>Have an account ? Login.</u></string>
+    <string name="does_not_have_an_account"><u>Don\'t have an account ? Sign up.</u></string>
+    <string name="agree_to_terms_and_condition">I agree to terms and conditions of Goods Guardian. Therefore declaring that my information will be stored for safety purposes.</string>
+
 </resources>
