--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,9 @@
     <string name="already_have_an_account"><u>Have an account ? Login.</u></string>
     <string name="does_not_have_an_account"><u>Don\'t have an account ? Sign up.</u></string>
     <string name="agree_to_terms_and_condition">I agree to terms and conditions of Goods Guardian. Therefore declaring that my information will be stored for safety purposes.</string>
+    <string name="login_all_caps_heading">LOGIN</string>
+    <string name="welcome_back">WELCOME BACK</string>
+    <string name="login_in_your_account">Login in your account</string>
+    <string name="forgot_password"><u>Forgot password?</u></string>
 
 </resources>
