Bug fixed and ogpa calculator now added with backend code and recyclerview working in main page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="for_someone_else">For Someone Else</string>
     <string name="enter_theory_marks">Enter Theory Marks</string>
     <string name="enter_practical_marks">Enter Practical Marks</string>
+    <string name="calculate">Calculate</string>
 
 </resources>
