--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,9 @@
     <string name="enter_theory_marks">Enter Theory Marks</string>
     <string name="enter_practical_marks">Enter Practical Marks</string>
     <string name="calculate">Calculate</string>
+    <string name="contact_owner">Contact Owner</string>
+    <string name="delete_account">Delete Account</string>
+    <string name="logout">Logout</string>
+    <string name="report_error">Report Error</string>
 
 </resources>
