--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="logout">Logout</string>
     <string name="report_error">Report Error</string>
     <string name="refresh">Refresh</string>
+    <string name="ogpa_graph">OGPA Graph</string>
 
 </resources>
