--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="ogpa_graph">OGPA Graph</string>
     <string name="bsc_agriculture">BSC AGRICULTURE</string>
     <string name="bsc_horticulture">BSC HORTICULTURE</string>
-    <string name="btech_agriculture">BTech Agriculture</string>
+    <string name="btech_agriculture">BTech Agriculture Engineering</string>
+    <string name="ogpa">OGPA</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
