refresh option changed to topper tips

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="graph">Graph</string>
     <string name="overall">Overall</string>
+    <string name="topper_tips">Topper Tips</string>
 
 </resources>
