--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -37,4 +37,8 @@
     <string name="overall">कुल मिलाकर</string>
     <string name="topper_tips">टॉपर टिप्स</string>
     <string name="change_language">भाषा बदलें</string>
+    <string name="name">नाम :- </string>
+    <string name="passing_year">स्नातक वर्ष :- </string>
+    <string name="college_name">कॉलेज का नाम :- </string>
+    <string name="message">संदेश :- </string>
 </resources>
