--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -43,4 +43,5 @@
     <string name="message">Message :- </string>
     <string name="semester">Semester :- </string>
     <string name="ogpa_total_ogpa">OGPA :- </string>
+    <string name="graph_ogpa_error_message_1_fragment">Cant set graph for single sem.</string>
 </resources>
