--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -42,7 +42,6 @@
     <string name="college_name">College Name :- </string>
     <string name="message">Message :- </string>
     <string name="semester">Semester :- </string>
-    <string name="sem">Semester</string>
     <string name="ogpa_total_ogpa">OGPA :- </string>
     <string name="graph_ogpa_error_message_1_fragment">Cant set graph for single sem.</string>
     <string name="ogpa_message_1_fragment">Enter details for OGPA.</string>
@@ -54,7 +53,7 @@
 
 
     <string name="bsc_agriculture_message_1">Share Topper Tips ?</string>
-    <string name="bsc_agriculture_message_2">Since you have scored more than 8 OGPA would you like to share some tips with other agriculture students ?\nIf yes then please don't delete pre written text.</string>
+    <string name="bsc_agriculture_message_2">Since you have scored more than 8 OGPA would you like to share some tips with other agriculture students ? If yes then please don\'t delete pre written text.</string>
     <string name="bsc_agriculture_message_3_no">No</string>
     <string name="bsc_agriculture_message_4_yes">Yes</string>
     <string name="bsc_agriculture_message_5">Marks more than 100 detected.</string>
