--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -42,7 +42,6 @@
     <string name="college_name">कॉलेज का नाम :- </string>
     <string name="message">संदेश :- </string>
     <string name="semester">छमाही :- </string>
-    <string name="sem">छमाही</string>
     <string name="ogpa_total_ogpa">ओजीपीए :- </string>
     <string name="graph_ogpa_error_message_1_fragment">एकल सेमेस्टर के लिए ग्राफ़ सेट नहीं किया जा सकता.</string>
     <string name="ogpa_message_1_fragment">ओजीपीए के लिए विवरण दर्ज करें।</string>
@@ -55,7 +54,7 @@
 
 
     <string name="bsc_agriculture_message_1">टॉपर युक्तियाँ साझा करें?</string>
-    <string name="bsc_agriculture_message_2">क्यूंकि आपने 8.5 से अधिक ओजीपीए स्कोर किया है, क्या आप अन्य कृषि छात्रों के साथ कुछ सुझाव साझा करना चाहेंगे? \nयदि हाँ तो कृपया पूर्वलिखित पाठ को न हटाएँ।?</string>
+    <string name="bsc_agriculture_message_2">क्यूंकि आपने 8.5 से अधिक ओजीपीए स्कोर किया है क्या आप अन्य कृषि छात्रों के साथ कुछ सुझाव साझा करना चाहेंगे? यदि हाँ तो कृपया पूर्वलिखित पाठ को न हटाएँ।?</string>
     <string name="bsc_agriculture_message_3_no">नहीं</string>
     <string name="bsc_agriculture_message_4_yes">हाँ</string>
     <string name="bsc_agriculture_message_5">100 से अधिक अंक का पता चला।</string>
