--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -69,5 +69,5 @@
 
     <string name="sure_to_logout">क्या आप लॉग आउट करना चाहते हैं ?</string>
     <string name="cancel">रद्द करें</string>
-
+    <string name="refresh_loading">ताज़ा</string>
 </resources>
