--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -12,7 +12,7 @@
     <string name="save">फाइल सुरक्षित करें</string>
     <string name="already_have_an_account"><u>एक खाता है? लॉग इन करें .</u></string>
     <string name="does_not_have_an_account"><u>कोई खाता नहीं है? साइन अप करें.</u></string>
-    <string name="agree_to_terms_and_condition">मैं वहां ग्रेड ऐस के नियमों और शर्तों से सहमत हूं, जिसमें घोषणा की गई है कि मेरी जानकारी सुरक्षा उद्देश्यों के लिए संग्रहीत की जाएगी I</string>
+    <string name="agree_to_terms_and_condition">मैं वहां ग्रेड ऐस के नियमों और शर्तों से सहमत हूं, जिसमें घोषणा की गई है कि मेरी जानकारी सुरक्षा उद्देश्यों के लिए संग्रहीत की जाएगी|</string>
     <string name="login_all_caps_heading">लॉग इन करें </string>
     <string name="welcome_back">स्वागत पुन: स्वागत है </string>
     <string name="login_in_your_account">अपना खाता लॉगिन करें </string>
@@ -21,7 +21,8 @@
     <string name="for_someone_else">किसी और के लिए </string>
     <string name="enter_theory_marks"> थ्योरी पेपर के अंक दर्ज करें </string>
     <string name="enter_practical_marks">प्रैक्टिकल अंक दर्ज करें </string>
-    <string name="calculate">गणना </string>
+    <string name="calculate">गणना</string>
+    <string name="Privacy_policy"><a href="https://drive.google.com/file/d/1ayPTzh_9EKUugo7l648y3M5TkFJBWnHi/view?usp=sharing">गोपनीयता नीति|</a></string>
     <string name="contact_owner">संपर्क स्वामी </string>
     <string name="delete_account">खाता हटा दो </string>
     <string name="logout">लॉग आउट</string>
