--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="ogpa_message_5_fragment">User with same name and semester already exists.</string>
     <string name="ogpa_message_6_fragment">Cancel</string>
     <string name="bsc_agriculture_message_1">Share Topper Tips ?</string>
-    <string name="bsc_agriculture_message_2">Since you have scored more than 8 OGPA would you like to share some tips with other agriculture students ? If yes then please don\'t delete pre written text.</string>
+    <string name="bsc_agriculture_message_2">Since you have scored more than 8 OGPA would you like to share some tips with other agriculture students ?\nIf yes then please don\'t delete pre written text.</string>
     <string name="bsc_agriculture_message_3_no">No</string>
     <string name="bsc_agriculture_message_4_yes">Yes</string>
     <string name="bsc_agriculture_message_5">Marks more than 100 detected.</string>
