wrong hindi words corrected.

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -2,39 +2,39 @@
 <resources>
     <string name="app_name">ग्रेड ऐस !</string>
     <string name="calculate_ogpa_effortlessly">ग्रेड ऐस के साथ आसानी से ओजीपीए की गणना करें.</string>
-    <string name="sign_up">साइन अप करें </string>
-    <string name="login">लॉग इन करें </string>
-    <string name="create_new_account">नया खाता बनाएँ </string>
-    <string name="enter_name">नाम दर्ज करें </string>
-    <string name="enter_email">ईमेल दर्ज करें </string>
-    <string name="enter_password">पास वर्ड दर्ज करें </string>
-    <string name="confirm_password">पासवर्ड की पुष्टि कीजिये </string>
+    <string name="sign_up">साइन अप करें</string>
+    <string name="login">लॉग इन करें</string>
+    <string name="create_new_account">नया खाता बनाएँ</string>
+    <string name="enter_name">नाम दर्ज करें</string>
+    <string name="enter_email">ईमेल दर्ज करें</string>
+    <string name="enter_password">पास वर्ड दर्ज करें</string>
+    <string name="confirm_password">पासवर्ड की पुष्टि कीजिये</string>
     <string name="save">फाइल सुरक्षित करें</string>
-    <string name="already_have_an_account"><u>एक खाता है? लॉग इन करें .</u></string>
-    <string name="does_not_have_an_account"><u>कोई खाता नहीं है? साइन अप करें.</u></string>
+    <string name="already_have_an_account"><u>एक खाता है? लॉग इन करें|</u></string>
+    <string name="does_not_have_an_account"><u>कोई खाता नहीं है? साइन अप करें|</u></string>
     <string name="agree_to_terms_and_condition">मैं वहां ग्रेड ऐस के नियमों और शर्तों से सहमत हूं, जिसमें घोषणा की गई है कि मेरी जानकारी सुरक्षा उद्देश्यों के लिए संग्रहीत की जाएगी|</string>
-    <string name="login_all_caps_heading">लॉग इन करें </string>
-    <string name="welcome_back">स्वागत पुन: स्वागत है </string>
-    <string name="login_in_your_account">अपना खाता लॉगिन करें </string>
+    <string name="login_all_caps_heading">लॉग इन करें</string>
+    <string name="welcome_back">स्वागत पुन: स्वागत है|</string>
+    <string name="login_in_your_account">अपना खाता लॉगिन करें|</string>
     <string name="forgot_password"><u>पासवर्ड भूल गए ?</u></string>
-    <string name="add_OGPA">ओ जी पी ए जोड़ें </string>
-    <string name="for_someone_else">किसी और के लिए </string>
-    <string name="enter_theory_marks"> थ्योरी पेपर के अंक दर्ज करें </string>
-    <string name="enter_practical_marks">प्रैक्टिकल अंक दर्ज करें </string>
+    <string name="add_OGPA">ओजीपीए जोड़ें </string>
+    <string name="for_someone_else">किसी और के लिए</string>
+    <string name="enter_theory_marks">थ्योरी पेपर के अंक दर्ज करें</string>
+    <string name="enter_practical_marks">प्रैक्टिकल अंक दर्ज करें</string>
     <string name="calculate">गणना</string>
     <string name="Privacy_policy"><a href="https://drive.google.com/file/d/1ayPTzh_9EKUugo7l648y3M5TkFJBWnHi/view?usp=sharing">गोपनीयता नीति|</a></string>
-    <string name="contact_owner">संपर्क स्वामी </string>
-    <string name="delete_account">खाता हटा दो </string>
+    <string name="contact_owner">संपर्क ऐप मालिक</string>
+    <string name="delete_account">खाता हटा दो</string>
     <string name="logout">लॉग आउट</string>
-    <string name="report_error">त्रुटि की रिपोर्ट करें </string>
-    <string name="refresh">ताज़ा करना </string>
-    <string name="ogpa_graph">ओ जी पी एक ग्राफ </string>
-    <string name="bsc_agriculture">बी.एससी कृषि </string>
-    <string name="bsc_horticulture">बी.एससी बागवानी </string>
-    <string name="btech_agriculture">बी.टेक एग्रीकल्चर इंजीनियरिंग </string>
-    <string name="ogpa">ओ जी पी ए </string>
-    <string name="hello_blank_fragment">नमस्ते काला टुकड़ा </string>
-    <string name="graph">ग्राफ़ </string>
+    <string name="report_error">त्रुटि की रिपोर्ट करें</string>
+    <string name="refresh">ताज़ा</string>
+    <string name="ogpa_graph">ओजीपीए ग्राफ</string>
+    <string name="bsc_agriculture">बी.एससी कृषि</string>
+    <string name="bsc_horticulture">बी.एससी बागवानी</string>
+    <string name="btech_agriculture">बी.टेक एग्रीकल्चर इंजीनियरिंग</string>
+    <string name="ogpa">ओजीपीए</string>
+    <string name="hello_blank_fragment">नमस्ते काला टुकड़ा</string>
+    <string name="graph">ग्राफ़</string>
     <string name="overall">कुल मिलाकर</string>
     <string name="topper_tips">टॉपर टिप्स</string>
     <string name="change_language">भाषा बदलें</string>
@@ -44,22 +44,19 @@
     <string name="message">संदेश :- </string>
     <string name="semester">छमाही :- </string>
     <string name="ogpa_total_ogpa">ओजीपीए :- </string>
-    <string name="graph_ogpa_error_message_1_fragment">एकल सेमेस्टर के लिए ग्राफ़ सेट नहीं किया जा सकता.</string>
+    <string name="graph_ogpa_error_message_1_fragment">एकल सेमेस्टर के लिए ग्राफ़ सेट नहीं किया जा सकता|</string>
     <string name="ogpa_message_1_fragment">ओजीपीए के लिए विवरण दर्ज करें।</string>
     <string name="ogpa_message_2_fragment">आप इसे बाद में नहीं बदल सकते।</string>
-    <string name="ogpa_message_3_fragment">जारी रखना</string>
+    <string name="ogpa_message_3_fragment">जारी रखें</string>
     <string name="ogpa_message_4_fragment">सेमेस्टर का चयन करें</string>
     <string name="ogpa_message_5_fragment">समान नाम और सेमेस्टर वाला उपयोगकर्ता पहले से मौजूद है।</string>
     <string name="ogpa_message_6_fragment">रद्द करें</string>
-
-
-
     <string name="bsc_agriculture_message_1">टॉपर युक्तियाँ साझा करें?</string>
     <string name="bsc_agriculture_message_2">क्यूंकि आपने 8.5 से अधिक ओजीपीए स्कोर किया है क्या आप अन्य कृषि छात्रों के साथ कुछ सुझाव साझा करना चाहेंगे?\nयदि हाँ तो कृपया पूर्वलिखित पाठ को न हटाएँ।?</string>
     <string name="bsc_agriculture_message_3_no">नहीं</string>
     <string name="bsc_agriculture_message_4_yes">हाँ</string>
     <string name="bsc_agriculture_message_5">100 से अधिक अंक का पता चला।</string>
-    <string name="bsc_agriculture_message_6">थ्योरी रूप में 100 से अधिक अंक का पता लगाया गया।</string>
+    <string name="bsc_agriculture_message_6">थ्योरी में 100 से अधिक अंक का पता लगाया गया।</string>
     <string name="bsc_agriculture_message_7">थ्योरी में 70 से अधिक अंक का पता चला।</string>
     <string name="bsc_agriculture_message_8">प्रैक्टिकल में 50 से अधिक अंक पाए गए।</string>
     <string name="bsc_agriculture_message_9">प्रैक्टिकल में 30 से अधिक अंक पाए गए।</string>
@@ -70,27 +67,25 @@
     <string name="cancel">रद्द करें</string>
     <string name="refresh_loading">ताज़ा</string>
     <string name="reset_password">पासवर्ड रीसेट</string>
-
-
-    <string name="enter_full_email_login">रीसेट लिंक पाने के लिए अपना ईमेल दर्ज करें। </string>
+    <string name="enter_full_email_login">रीसेट लिंक पाने के लिए अपना ईमेल दर्ज करें।</string>
     <string name="Send">भेजें</string>
     <string name="Invalid_email">अमान्य ईमेल पता।</string>
-    <string name="Invalid_email_spaces">ईमेल में रिक्त स्थान नहीं हो सकते</string>
-    <string name="Invalid_password_spaces">पासवर्ड में स्पेस नहीं हो सकता</string>
-    <string name="Reset_link_sent">रीसेट लिंक भेजा गया.</string>
+    <string name="Invalid_email_spaces">ईमेल में रिक्त स्थान नहीं हो सकते|</string>
+    <string name="Invalid_password_spaces">पासवर्ड में स्पेस नहीं हो सकता|</string>
+    <string name="Reset_link_sent">रीसेट लिंक भेजा गया|</string>
     <string name="enter_all_fields">सभी फ़ील्ड दर्ज करें</string>
-    <string name="email_contains_spaces">ईमेल में रिक्त स्थान नहीं हो सकते</string>
+    <string name="email_contains_spaces">ईमेल में रिक्त स्थान नहीं हो सकते|</string>
     <string name="try_with_another_email">कृपया किसी अन्य ईमेल से लॉगिन/साइनअप करें।</string>
     <string name="Update_Available">उपलब्ध अद्यतन</string>
     <string name="Update">अद्यतन</string>
     <string name="Topper_Tips">टॉपर टिप्स</string>
-    <string name="I_comply">मैं अनुपालन करता हूं</string>
+    <string name="I_comply">मैं अनुपालन करता हूं|</string>
     <string name="enter_valid_email">मान्य ईमेल दर्ज करें</string>
-    <string name="password_greater_then_8">Password must be greater than 8 characters</string>
-    <string name="both_password_must_be_same">पासवर्ड 8 अक्षर से अधिक होना चाहिए</string>
-    <string name="name_greater_then_1">नाम 1 अक्षर से बड़ा होना चाहिए</string>
-    <string name="I_Agree_sign_up">मैं सहमत हूं</string>
-    <string name="I_not_Agree_sign_up">मैं सहमत नहीं हूँ</string>
+    <string name="password_greater_then_8">पासवर्ड 8 अक्षर से अधिक होना चाहिए|</string>
+    <string name="both_password_must_be_same">पासवर्ड 8 अक्षर से अधिक होना चाहिए|</string>
+    <string name="name_greater_then_1">नाम 1 अक्षर से बड़ा होना चाहिए|</string>
+    <string name="I_Agree_sign_up">मैं सहमत हूं|</string>
+    <string name="I_not_Agree_sign_up">मैं सहमत नहीं हूँ|</string>
     <string name="I_agree">मैं मानता हूं कि ओजीपीए (±0.10) की गणना करते समय ऐप कभी-कभी मामूली त्रुटि दिखा सकता है।</string>
     <string name="I_agree_terms_and_condition">कृपया नियम एवं शर्तों से सहमत हों</string>
     <string name="Update_version">ऐप का नया संस्करण उपलब्ध है, हम ऐप को अपडेट करने की सलाह देते हैं।</string>
