--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="bsc_horticulture">B.Sc HORTICULTURE</string>
     <string name="btech_agriculture">B.Tech Agriculture Engineering</string>
     <string name="ogpa">OGPA</string>
+    <string name="Semester">Semester</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="graph">Graph</string>
     <string name="overall">Overall</string>
