--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -51,6 +51,7 @@
     <string name="ogpa_message_4_fragment">सेमेस्टर का चयन करें</string>
     <string name="ogpa_message_5_fragment">समान नाम और सेमेस्टर वाला उपयोगकर्ता पहले से मौजूद है।</string>
     <string name="ogpa_message_6_fragment">रद्द करें</string>
+    <string name="Semester">छमाही</string>
     <string name="bsc_agriculture_message_1">टॉपर युक्तियाँ साझा करें?</string>
     <string name="bsc_agriculture_message_2">क्यूंकि आपने 8.5 से अधिक ओजीपीए स्कोर किया है क्या आप अन्य कृषि छात्रों के साथ कुछ सुझाव साझा करना चाहेंगे?\nयदि हाँ तो कृपया पूर्वलिखित पाठ को न हटाएँ।?</string>
     <string name="bsc_agriculture_message_3_no">नहीं</string>
