text view and edit text sdp size changed to ssp for letting device and user set its accessibility and size and added english and hindi to string.xml all 3

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -90,4 +90,9 @@
     <string name="I_agree">I Comply that the app can some time show minor error while calculating OGPA(±0.10)</string>
     <string name="I_agree_terms_and_condition">Please agree to terms and conditions</string>
     <string name="Update_version">New version of the app is available we recommend updating the app.</string>
+
+
+
+    <string name="english">English</string>
+    <string name="hindi">हिंदी</string>
 </resources>
